fdo#37814: SHCreateItemFromParsingName doesn't like LO's file URLs

...but apparently wants pathnames instead, cf. the other use of it in
WinSalInstance::AddToRecentDocumentList (vcl/win/source/app/salinst.cxx).

Change-Id: Iaa64ff82915f7cbfee55b4389387b226f7adc919
(cherry picked from commit e123ffd66088783ce74a7b5f15e9d324b39ecf67)